add applicant name function
